# rise-distance

./: .gitignore  Cargo.toml  flake.nix  guide_and_sample.sh  pyproject.toml  run_guide_random.py  run_guide_random.sh  sweep.sh
analysis/: .gitignore  README.md  cost_evolution.ipynb  enumerate_vs_random.ipynb  grid_search.ipynb  guide_eval.ipynb  helpers.py  plots.py  pyproject.toml  random_strategies.ipynb  ranker.ipynb  ranker.py  ranker.sh  size_estimate.ipynb  success.ipynb  top_k_eval.ipynb
data/: .gitignore
docs/: README.md  fingerprint_probe.md  frontier_sampling.md  guide_experiment.md  incremental_probe.md  layered_counting.md  novel_sampling.md  smallest_novel_size_impl.md
docs/counting/: layered_counting.md  novel_size_search.md
docs/sampling/: frontier_sampling.md  novel_sampling.md
hooks/: pre-commit
ranker/: ranker.ipynb  ranker.py  ranker.sh  server.py
scripts/: common.py  driver.py  generate_and_measure.py  generate_goals.py  generate_seeds.py  goal_driver.py  guided_search.py  guided_search_grid.py  measure_cost.py  measure_size.py  run_guide_random.py
src/: boltzmann.rs  choices.rs  cli.rs  count.rs  counter.rs  diversity.rs  eqsat.rs  euler_str.rs  extract.rs  flat_tree.rs  generator.rs  graph.rs  ids.rs  labels.rs  lib.rs  min.rs  nodes.rs  novel.rs  origin.rs  overlap.rs  partial.rs  sampler.rs  sampling.rs  search.rs  structural.rs  test_utils.rs  tree.rs  utils.rs  zs.rs
src/analysis/: mod.rs
src/analysis/commutative_semigroup/: expr_count.rs  mod.rs
src/analysis/semilattice/: extract.rs  mod.rs
src/cli/: argparse.rs  argtypes.rs  logging.rs  mod.rs  parquet.rs  sample.rs  types.rs
src/count/: enumerate.rs  mod.rs  novel.rs  overlap.rs  plain.rs  sample.rs  type_cache.rs
src/egg/: generate.rs  lambda.rs  mini_rise.rs  mod.rs  origin.rs  sampler.rs
src/egg/lambda/: generate.rs  label.rs  mod.rs
src/egg/math/: cost_fn.rs  generate.rs  label.rs  mod.rs
src/egg/prop/: generate.rs  mod.rs
src/langs/: lambda.rs  mini_rise.rs  mod.rs
src/langs/dios_egraphs/: config.rs  cost.rs  mod.rs  rewriteconcats.rs  rules.rs  stringconversion.rs  veclang.rs
src/langs/diospyros/: binopsearcher.rs  macsearcher.rs  main.rs  mod.rs  rewriteconcats.rs  rules.rs  searchutils.rs
src/langs/math/: cost_fn.rs  generate.rs  mod.rs
src/langs/prop/: generate.rs  mod.rs
src/math/: label.rs  mod.rs
src/rise/: address.rs  expr.rs  graph.rs  label.rs  mod.rs  nat.rs  primitive.rs  type_analysis.rs  types.rs
src/rise/lang/: address.rs  nat.rs
src/sampling/: common.rs  count.rs  distribution.rs  mod.rs  naive.rs  novel.rs  plain.rs  precompute.rs  weigher.rs  zs_min_distance.rs
src/sampling/count/: layered.rs  mod.rs  mod61.rs  novel.rs  plain.rs
src/sampling/sampler/: mod.rs  novel.rs  plain.rs  weigher.rs
src/sampling/sampler/frontier/: balanced.rs  independent.rs  mod.rs  space.rs
src/sampling/weigher/: count.rs  mod.rs  naive.rs
src/search/: mod.rs
src/sketch/: containment.rs  extraction.rs
src/tree/: flat.rs  mod.rs  origin.rs  partial.rs  simple.rs  typed.rs  unfolded.rs
