[package]
name = "rise-distance"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "rise_distance"
crate-type = ["rlib"]

[dependencies]
ahash = { version = "0.8", features = ["compile-time-rng"] }
bon = "3"
clap = { version = "4", features = ["derive"] }
egg = { version = "0.11", features = ["serde-1"] }
env_logger = "0.11"
hashbrown = { version = "0.16", features = ["rayon", "serde"] }
indexmap = { version = "2", features = ["serde"] }
indicatif = { version = "0.18", features = ["rayon"] }
log = "0.4"
num = { version = "0.4", features = ["serde", "rand"] }
num-traits = "0.2"
ordered-float = { version = "5", features = ["serde"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symbolic_expressions = "5"
thiserror = "2"

[lints.clippy]
all = { level = "deny", priority = -2 }
pedantic = { level = "warn", priority = -1 }

redundant_closure_for_method_calls = "allow"
module_name_repetitions = "allow"

dbg_macro = "warn"
empty_structs_with_brackets = "warn"
get_unwrap = "warn"
map_err_ignore = "warn"
needless_raw_strings = "warn"
pub_without_shorthand = "warn"
redundant_type_annotations = "warn"
# shadow_reuse = "warn"
shadow_same = "warn"
str_to_string = "warn"
string_add = "warn"
implicit_clone = "warn"
create_dir = "warn"
deref_by_slicing = "warn"
filetype_is_file = "warn"
format_push_string = "warn"
impl_trait_in_params = "warn"
semicolon_inside_block = "warn"
tests_outside_test_module = "warn"
todo = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unnecessary_self_imports = "warn"
verbose_file_reads = "warn"
shadow_unrelated = "warn"

[profile.release-with-debug]
inherits = "release"
debug = true

[[bin]]
name = "compare"
path = "src/bin/compare.rs"

[[bin]]
name = "distance"
path = "src/bin/distance.rs"
