[project]
name = "rise-distance-analysis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "polars",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "jupyter",
    "torch",
    "transformers",
    "accelerate",
    "tensorboard",
    "tqdm",
    "diceware",
    "tyro",
    # "causal-conv1d",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1", "nbstripout>=0.9.1", "ruff", "ty"]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu132"
# default = true

[tool.ruff]
line-length = 100
src = [".", "analysis", "ranker", "scripts"]

[tool.ty.environment]
extra-paths = ["analysis", "ranker", "scripts"]
