[project]
name = "rise-distance-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "polars",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "jupyter",
    "torch",
    "transformers",
    "accelerate",
    "tensorboard",
    "tqdm",
    "flash-linear-attention",
    # "causal-conv1d",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]
