[project]
name = "rise-distance-analysis"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "polars",
    "matplotlib",
    "scikit-learn",
    "scipy",
    "jupyter",
    "torch",
    "transformers",
    "accelerate",
    "tensorboard",
    "tqdm",
    "flash-linear-attention",
    "torch-tb-profiler",
    # "causal-conv1d",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]


[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
# default = true

[tool.ruff]
line-length = 100
